--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
@@ -1,6 +1,11 @@
-<div class="row">
-    <div class="col-sm-12">
-      <h3 style="color: #c92329">Mis Aplicaciones</h3>
+<body class="align">
+  <div class="login">
+  <div class="login__administracion">  
+  <div class="col-md-2">
+  <button class="buttonRegresar"  (click)="ClickRegresar()">Regresar</button>  
+  </div>
+   <div class="col-md-12"><br> 
+      <h2 style="color: #c92329">Mis Aplicaciones</h2>
     </div>
   </div>
   <div class="row col-sm-12">
@@ -25,5 +30,9 @@
       </div>
     </div>
   </div>
+  </div>
+  </body>
+
+  
 
   
