--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -110,7 +110,7 @@
              <button class="buttonCancelar" (click)="clickCancelarImg()">Cancelar</button>
            </div>
         </div>
-        <button class="buttonVolver"  (click)="CancelarSesion()">Volver</button>   
+        <button class="buttonRegresar"  (click)="ClickRegresar()">Regresar</button>   
      </div>
     </div>
    </body>
