--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
@@ -45,9 +45,7 @@
 
       <div>
         <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
-        <a href="/sesion-empresa?id_aplicacion={{ id_aplicacion }}">
-          <button class="buttonCancelar">Cancelar</button>
-        </a>  
+        <button class="buttonCancelar" (click)="clickCancelar()">Cancelar</button>
       </div>
 
     </div>
