--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
@@ -18,7 +18,7 @@
     </div>
 
       <form class="login__form" >     
-        <div *ngIf="isVisiblePaso1">
+        <!-- <div *ngIf="isVisiblePaso1">
         <div>
             <div class="input-wrapper">
               <label for="contrasenaActual">CONTRASEÑA ACTUAL</label>
@@ -35,7 +35,7 @@
         <div>
           <button class="buttonSiguiente" (click)="clickPaso2()" >Siguiente</button>    
         </div>
-      </div> 
+      </div>  -->
 
       <div *ngIf="isVisiblePaso2">
         <div>
