--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
@@ -343,7 +343,7 @@
     border: 2px solid #ccc;
   }
   
-  .buttonVolver {
+  .buttonRegresar {
     background-color: #58595B;
     color: #FFFFFF;
     margin: 12px 0px 6px 0px;
@@ -375,7 +375,7 @@
     background-color: #000000;
   }
 
-  .buttonVolver:hover {
+  .buttonRegresar:hover {
     background-color: red;
     border: 2px solid #EB1E23;
   
