--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -64,7 +64,7 @@
          <button class="buttonCancelar" (click)="clickCancelarImg()">Cancelar</button>
        </div>
     </div><br>
-    <button class="buttonVolver"  (click)="CancelarSesion()">Volver</button>   
+    <button class="buttonRegresar"  (click)="ClickRegresar()">Regresar</button>   
     </div>
 </div>
 </body>
