--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -71,9 +71,7 @@
     
           <div>
             <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
-            <a href="/sesion-persona?id_aplicacion={{ id_aplicacion }}">
-              <button class="buttonCancelar">Cancelar</button>
-            </a>         
+            <button class="buttonCancelar" (click)="clickCancelar()">Cancelar</button>        
           </div>
       </div>
       <div *ngIf="isVisiblePaso2">
