--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="box-view">
               <a [attr.href]="app.url" target="_blank" rel="tooltip"data-placement="bottom" title="Ir a aplicación">
-                Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                <button class="buttonSiguiente">Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
               </a>
             </div>
         </div>
