--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
@@ -5,7 +5,7 @@
   <button class="buttonRegresar"  (click)="ClickRegresar()">Regresar</button>  
   </div>
    <div class="col-md-12"><br> 
-      <h2 style="color: #c92329">Mis Aplicaciones</h2>
+      <h3 style="color: #000">Mis Aplicaciones</h3>
     </div>
   </div>
   <div class="row col-sm-12">
