--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -47,7 +47,7 @@
           <h3>¡Listo!</h3>
           <p>Se te ha enviado un link a tu correo registrado</p>
           <div>
-            <button class="buttonSiguiente" (click)="clickCancelar()">Ir a inicio</button> 
+            <button class="buttonSiguiente" (click)="CancelarSesion()">Ir a inicio</button> 
           </div>
         </div>
         
