--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -17,15 +17,15 @@
      </div>
           <div class="personal" *ngIf="isVisiblePerfil">
             <h5>Información de empresa</h5>
-               <p>RUC {{ruc}}</p>
-               <p>Razón social {{razon_social}}</p>
-               <p>Dirección {{direccion}}</p>
+               <p>RUC : {{ruc}}</p>
+               <p>Razón social :  {{razon_social}}</p>
+               <p>Dirección : {{direccion}}</p>
              </div>
              <div class="representante" *ngIf="isVisiblePerfil">
                 <h5>Información de persona</h5>
                     <div  *ngIf="isVisibleRepresentante">
-                     <p>DNI {{dni}}</p>
-                     <p>Nombres y apellidos {{nombre_completo}}</p>
+                     <p>DNI : {{dni}}</p>
+                     <p>Nombres y apellidos : {{nombre_completo}}</p>
                    </div>
                 </div>
                 <div class="column" *ngIf="isVisibleEditarRepresentante" >
@@ -73,8 +73,8 @@
              <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20" (click)="clickEditarContacto()">
            </h5>
              <div  *ngIf="isVisibleContacto">
-               <p>Celular {{celular}}</p>
-               <p>Correo {{correo}}</p>
+               <p>Celular : {{celular}}</p>
+               <p>Correo : {{correo}}</p>
              </div>
            </div>
    
