--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/modals/decision/decision.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/modals/decision/decision.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="start center" mat-dialog-title *ngIf="title!=''">
-    <h2 class="headline m-0" fxFlex="auto">{{title}}</h2>
+    <h2 class="headline m-0" fxFlex="auto" style="font-family: 'plutosansbold';">{{title}}</h2>
     <button class="text-secondary" mat-dialog-close="false" mat-icon-button type="button">
 
     </button>
