--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
@@ -28,7 +28,22 @@
     padding: 0px;
     transition: all 0.3s;
   }
-  
+  .login input {
+    background-color: #fff;
+    width: 100%;
+    padding: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 1px;
+    box-sizing: border-box;
+    font-size: 12px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+  }
+  .login input:focus {
+    border: 1px solid rgba(229, 0, 0, 0.8) !important;
+    outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+  }
   p {
     margin: 0px;
     padding: 0px;
@@ -45,7 +60,7 @@
     text-align: center;
     width: 100%;
     color: #000;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid ;
   }
 
   a:hover {
@@ -56,8 +71,6 @@
 /* ---------- ALIGN ---------- */
     .align {
         display: grid;
-        place-items: center;
-        background-color: #eee;
       }
       
 /* ---------- LOGIN ---------- */
@@ -71,7 +84,6 @@
 }
 
 .form {
-    width: 410px;
     background-color: #fff;
     border-bottom-left-radius: 0em;
     border-bottom-right-radius: 0em;
@@ -142,7 +154,7 @@
   
     }
     .form .representante img{
-        margin-left: 148px;
+        margin-left: 0;
        }
     
 
@@ -159,7 +171,7 @@
 
    
   .form .contacto img{
-    margin-left: 196px;
+    margin-left: 0;
    }
 
 
@@ -317,7 +329,7 @@
 
 
   .buttonSiguiente {
-    background-color: #58595B;
+    background-color: #a4a4a4;
     color: #FFFFFF;
     margin: 12px 0px 6px 0px;
     width: 100%;
@@ -327,13 +339,14 @@
     cursor: pointer;
     border-radius: 1px;
     padding: 5px 7px;
-    border: 2px solid #58595B;
+    font-family: 'plutosansregular';
+    border: 0;
   }
     
   .buttonCancelar {
-    background-color: #eee;
-    color: #000;
-    margin-bottom: 5px;
+    background-color: #f2f2f2;
+    color: #d4d4d4;
+    margin: 12px 0px 6px 0px;
     width: 100%;
     font-size: 12px;
     text-align: center;
@@ -341,7 +354,8 @@
     cursor: pointer;
     border-radius: 1px;
     padding: 5px 7px;
-    border: 2px solid #ccc;
+    border: 0px solid #ccc;
+    font-family: 'plutosansregular';
   }
   
   .buttonRegresar {
@@ -356,6 +370,7 @@
     border-radius: 1px;
     padding: 5px 7px;
     border: 2px solid #58595B;
+    font-family: 'plutosansregular';
   }
   
   .buttonPaso {
@@ -568,7 +583,7 @@
   width: 360px;
   height: 340px;
   padding: 10px 0px 10px 0px;
-  margin-top: 20px;
+  margin: 20px auto;
 }
 
 .form .editar .circle {
@@ -587,4 +602,43 @@
     width: 50%;
     padding: 25px 10px 10px 25px;
     color: #000;
+  }
+  @media only screen and (max-width: 320px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      max-width: 320px !important;
+      padding: 40px;
+      height: fit-content;
+      margin: 50px auto 20px;
+  }
+  
+  .login {
+    max-width: 320px !important;  
+  }
+  /* ---------- ALIGN ---------- */
+  .align {
+    display: grid;
+    place-items: flex-start;
+  }
+  
+  }
+  @media only screen and (min-width: 780px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      width: 700px !important;
+      padding: 40px;
+      height: fit-content;
+      margin: 50px auto 20px;
+  }
+  
+  .login {
+    width: 700px !important;  
+  }
+  
   }
