--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -6,14 +6,14 @@
       <div *ngIf="isVisiblePaso1 || isVisiblePaso2 ">
         <header class="login__header">
           <div class="logo-produce">
-            <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+            <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo">
           </div>  
           <div class="logo-aplicacion">
             <img [src]="urlArchivo" alt="archivo"  width="138">
             <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
           </div>
-          <h2 align="center">Cambiar contraseña</h2>
-          <p>Persona Jurídica</p>
+          <h2 style="text-align: center; font-size: 26px;">Cambiar contraseña</h2>
+          <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</p>
        </header>
     </div>
 
@@ -40,45 +40,45 @@
       <div *ngIf="isVisiblePaso2">
         <div>
             <div class="input-wrapper">
-              <label for="contrasenaNueva">CONTRASEÑA NUEVA</label>
-              <input type="password"  id="contrasenaNueva" name="contrasenaNueva" placeholder="" [(ngModel)]="contrasenaNueva" (change)="changeContrasenaNueva($event)" maxlength="150" >      
+              <label for="contrasenaNueva" style="color: rgba(88, 89, 91, 0.8);font-size:13px; font-family:'plutosansregular'; font-weight: 400;">CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasenaNueva" name="contrasenaNueva" placeholder="" [(ngModel)]="contrasenaNueva" (change)="changeContrasenaNueva($event)" maxlength="150" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">      
               <img src="../../assets/img/ver_on.png" (click)="mostrarContrasenaNueva()" id="eyeContrasenaNueva" class="input-icon password">
             </div>
-              <p class="validador" *ngIf="validadorContrasenaNueva">Debe ingresar la contraseña.</p>
-              <p class="validador" *ngIf="validadorRequisitosContrasenaNueva">La contraseña debe cumplir con los requistos</p>
+              <p class="validador" *ngIf="validadorContrasenaNueva" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar la contraseña.</p>
+              <p class="validador" *ngIf="validadorRequisitosContrasenaNueva" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">La contraseña debe cumplir con los requistos</p>
         </div>
     
          <div>
             <div class="input-wrapper">
-              <label for="contrasenaRep">REPETIR CONTRASEÑA NUEVA</label>
-              <input type="password"  id="contrasenaRep" name="contrasenaRep" placeholder="" [(ngModel)]="contrasenaRep" (change)="changeContrasenaRep($event)" maxlength="150" >      
+              <label for="contrasenaRep" style="color: rgba(88, 89, 91, 0.8);font-size:13px; font-family:'plutosansregular'; font-weight: 400;">REPETIR CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasenaRep" name="contrasenaRep" placeholder="" [(ngModel)]="contrasenaRep" (change)="changeContrasenaRep($event)" maxlength="150" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">      
               <img src="../../assets/img/ver_on.png" (click)="mostrarContrasenaRep()" id="eyeContrasenaRep" class="input-icon password">
             </div>
-              <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir">No coincide con la contraseña ingresada.</p>
+              <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">No coincide con la contraseña ingresada.</p>
         </div> 
     
 
         <div>
             <div class="left">
-              <label class="radio">Al menos un simbolo
+              <label class="radio" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos un simbolo
                <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo" disabled>
                <span class="checkradio"></span>
               </label>
            </div>         
            <div class="left">
-            <label class="radio">Al menos una mayúscula
+            <label class="radio" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos una mayúscula
              <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
            <div class="left">
-            <label class="radio">Al menos un número
+            <label class="radio" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos un número
              <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros" disabled >
              <span class="checkradio"></span>
             </label>
          </div>
          <div class="left">
-            <label class="radio">Más de 8 digitos
+            <label class="radio" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Más de 8 digitos
              <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos" disabled>
              <span class="checkradio"></span>
             </label>
@@ -92,8 +92,8 @@
     
         <div *ngIf="validaSuccess">
             <div class="center">
-              <h3>Contraseña cambiada</h3>
-              <label class="center">Tu contraseña fue guardada con exito</label>
+              <h3 style="text-align: center; font-size: 26px;">Contraseña cambiada</h3>
+              <label class="center" style="text-align: center; font-size: 13px; font-weight: 300; font-family:'plutosanslight'; color: black;">Tu contraseña fue guardada con exito</label>
             </div>
 
            <div>
