--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
@@ -1,395 +1,435 @@
 /* ---------- GENERAL ---------- */
 * {
-    box-sizing: inherit;
-  }
-  
-  html {
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: 'Varela Round', sans-serif;
-    line-height: 1.5;
-    margin: 0;
-    padding: 0vmin;
-  }
-  
-  
-  /*min-block-size: 10vh;*/
-  
-  h2 {
-    font-size: 1.75rem;
-  }
-  
-  h3 {
-    color: #000000;
-    text-align: center;
-    margin-top: 0%;
-    margin-bottom: 0%;
-  }
-  
-  input {
-    background-image: none;
-    border: none;
-    font: inherit;
-    margin: 0px;
-    padding: 0px;
-    transition: all 0.3s;
-  }
-  
-  
-  p {
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-  }
-   
-  svg {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-  
-  a {
-    text-align: center;
-    width: 100%;
-    color: #000;
-    border-bottom: 1px solid;
-  }
-  
-  a:hover {
-    border-bottom: 0px solid;
-    background: #eee;
-  }
-   
-  
-  /* ---------- ALIGN ---------- */
-  .align {
-    display: grid;
-    place-items: center;
-    background-color: #eee;
-  }
-  
-  /* ---------- BUTTON ---------- */
-  
-  .buttonSiguiente {
-    background-color: #58595B;
-    color: #FFFFFF;
-    margin: 12px 0px 6px 0px;
-    width: 100%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 5px 7px;
-    border: 2px solid #58595B;
-  }
-    
-  .buttonCancelar {
-    background-color: #eee;
-    color: #000;
-    margin-bottom: 5px;
-    width: 100%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 5px 7px;
-    border: 2px solid #ccc;
-  }
-  
-  
-  .buttonPaso {
-    background-color: #000000; /* Green */
-    border: none;
-    color: white;
-    padding: 6px 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 4px 7px;
-    cursor: pointer;
-    border-radius: 50%;
-  }
-  
-  .buttonSiguiente:hover {
-    background-color: #000000;
-  }
-  
-  
-  /* ---------- ICONS ---------- */
-  .icons {
-    
-    display: none;
-  }
-  
-  .icon {
-    fill: currentcolor;
-    display: inline-block;
-    height: 1em;
-    width: 1em;
-  }
-  
-  /* ---------- LOGIN ---------- */
-  .login {
-    width: 410px;
-    height: 620px;
-    background-color: #FFF
-  }
-  
-  .login__header {
-    background-color: #fff;
-    color: #000;
-    padding: 0.5em 0.5em 0em 0.5em;
-  }
-  
-  .login__header h3 {
-    margin-top: 0%;
-    margin-bottom: 0%;
-  }
-  
-  
-  .login__header p {
-    text-align: center;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    padding-top: 0%;
-  }
-  
-  
-  .login__header :first-child {
-    margin-top: 0;
-  }
-  
-  .login__header :last-child {
-    margin-bottom: 10px;
-  }
-  
-  
-  .login h2 .icon {
-    margin-right: 14px;
-  }
-  
-  .login__form {
-    background-color: #fff;
-    border-bottom-left-radius: 0em;
-    border-bottom-right-radius: 0em;
-    color: #777;
-    display: grid;
-    gap: 0.5em;
-    padding: 0.5em 1.6em 1.3em 1.6em;
-    
-  }
-  
-  .login label{
-    text-align: left;
-    font-size: 12px;
-    margin: 0px;
-  }
-  
-  
-  .login input {
-    background-color: #fff;
-    width: 100%;
-    padding: 5px 7px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    font-size: 12px;
-    margin-bottom: 7px;
-    margin-top: 5px;
-  }
-  
-  .login .input-wrapper {
-    position: relative;
-    width: 100%;
-  }
-  
-  
-  .login .input.password {
-    padding: 15px 35px 15px 15px;
-  }
-  
-  .login .input-icon {
-    color: #191919;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 12px;
-    top: 63%;
-    transform: translateY(-50%);
-  }
-  
-  
-  .login .input-icon.password {
-    left: unset;
-    right: 12px;
-    opacity: 0.4;
-  }
-  
-  
-  
-  .login input:required {
-    border: 1px solid #EB1E23;
-  }
-  
-  .login input:invalid {
-    border: 1px solid #EB1E23;
-  }
-  
-  .login input:valid {
-    border: 1px solid #ccc;
-  }
-  
-  .login input:disabled {
-    background: #eee;
-  }
-  
-  
-  .login select {
-    padding: 6px 7px;
-    width: 80%;
-    font-size: 12px;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    margin-bottom: 5px;
-  }
-  
-  
-  
-  
-  .login input[type="submit"] {
-    display: block;
-    margin: 0px auto;
-  }
-  
-  
-  
-  .logo-produce, h1, p {
-    text-align: left;
-    padding-bottom: 5px;
-  } 
-  
-  .logo-aplicacion, h1, p {
-    text-align: center;
-    margin-top: 4px;
-  } 
-  
-  
-  .column {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  
-  .left {
-    width: 50%;
-    margin-top: 5px;
-  }
-  .right {
-    width: 50%;
-    margin-top: 5px;
-  }
-  .center {
-    text-align: center;
-    margin-bottom: 12px;
-  }
+  box-sizing: inherit;
+}
 
-  .align-right {
-    text-align: right;
-    margin-bottom: 12px;
-    font-size: 12px;
-  }
-  
-  .disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
-  }
-  
-  /*--------------Checkbox------------*/
-  
-  /* los checkboxes */
-  #c1 input:checked ~ .checkmark {
-  background-color: #000;
-  }
-  
-  /* Contenedor */
-  .check {
-    display: block;
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Varela Round', sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0vmin;
+}
+
+/*min-block-size: 10vh;*/
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  color: #000000;
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+.login__header h3 {
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+@media only screen and (max-width: 320px) {
+  .login {
     position: relative;
-    padding-left: 20px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    font-size: 22px;
-  }
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    max-width: 320px !important;
+    padding: 40px;
+    height: fit-content;
+    margin: 50px auto 20px;
+}
+
+.login {
+  max-width: 320px !important;  
+}
+/* ---------- ALIGN ---------- */
+.align {
+  display: grid;
+  place-items: flex-start;
+}
+
+}
+@media only screen and (min-width: 780px) {
+  .login {
+    position: relative;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    width: 700px !important;
+    padding: 40px;
+    height: fit-content;
+    margin:  50px auto 20px;
+}
+
+.login {
+  width: 700px !important;  
+}
+
+}
+
+
+
+input {
+  background-image: none;
+  border: none;
+  font: inherit;
+  margin: 0px;
+  padding: 0px;
+  transition: all 0.3s;
+}
+
+
+
+p {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+ 
+svg {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+a {
+  text-align: center;
+  width: 100%;
+  color: #000;
+  border-bottom: 1px solid;
+}
+
+a:hover {
+  border-bottom: 0px solid;
+  background: #eee;
+}
+
+/* ---------- ALIGN ---------- */
+.align {
+  display: grid;
+}
+
+
+/* ---------- BUTTON ---------- */
+.buttonSiguiente {
+  background-color: rgba(88, 89, 91, 0.8);
+  color: #FFFFFF;
+  margin: 12px 0px 6px 0px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 5px 7px;
+  border: 0px solid #58595B;
+  font-family: 'plutosansregular';
+  font-weight: 500;
+}
   
-  /* escondemos el default checkbox */
-  .check input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
+.buttonCancelar {
+  background-color: #eee;
+  color: #000;
+  margin-bottom: 5px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 5px 7px;
+  border: 0px solid #ccc;
+  font-family: 'plutosansregular';
+  font-weight: 500;
+}
+
+
+.buttonPaso {
+  background-color: #000000; /* Green */
+  border: none;
+  color: white;
+  padding: 6px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 7px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.buttonSiguiente:hover {
+  background-color: #000000;
+}
+.buttonCancelar:hover {
+  background-color: #EB1E23;
+  color: #FFF;
+}
+
+/* ---------- ICONS ---------- */
+.icons {
   
-  /* creamos un custom checkbox */
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 15px;
-    width: 15px;
-    background-color: #ccc;
-    border-radius: 50%;
-  }
+  display: none;
+}
+
+.icon {
+  fill: currentcolor;
+  display: inline-block;
+  height: 1em;
+  width: 1em;
+}
+
+/* ---------- LOGIN ---------- */
+.login {
+  background-color: #FFF
+}
+
+.login__header {
+  background-color: #fff;
+  color: #000;
+  padding: 0.5em 0.5em 0em 0.5em;
+}
+
+.login__header h3 {
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+
+.login__header p {
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  padding-top: 0%;
+}
+
+
+.login__header :first-child {
+  margin-top: 0;
+}
+
+.login__header :last-child {
+  margin-bottom: 10px;
+}
+
+.login h2 .icon {
+  margin-right: 14px;
+}
+
+.login__form {
+  background-color: #fff;
+  border-bottom-left-radius: 0em;
+  border-bottom-right-radius: 0em;
+  color: #777;
+  display: grid;
+  gap: 0.5em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
-  /* Al pasar el mouse encima, lo ponemos gris */
-  .check:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-  
-  /* creamos el marcador (escondido al no seleccionar) */
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* mostramos el marcador al seleccionar */
-  .check input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  /* estilo del marcador */
-  .check .checkmark:after {
-    left: 7px;
-    top: 4px;
-    width: 1px;
-    height: 7px;
-    border: solid #fff;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-  
-  .login .radio {
-    font-size: 10px;
-  }
-  
-  .columnRadio {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  
-  /* -------------Radio----------------*/
+}
+
+.login label{
+  text-align: left;
+  font-size: 12px;
+  margin: 0px;
+}
+
+
+.login input {
+  background-color: #fff;
+  width: 100%;
+  padding: 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+  font-size: 12px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.login input:focus {
+  border: 1px solid rgba(229, 0, 0, 0.8) !important;
+  outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+}
+.login .input-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+
+.login .input.password {
+  padding: 15px 35px 15px 15px;
+}
+
+.login .input-icon {
+  color: rgba(229, 0, 0, 0.8) !important;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 12px;
+  top: 65%;
+  transform: translateY(-50%);
+}
+
+.login .input-icon.password {
+  left: unset;
+  right: 12px;
+  opacity: 0.4;
+}
+
+
+
+.login input:required {
+  border: 1px solid #EB1E23;
+}
+
+.login input:invalid {
+  border: 1px solid #EB1E23;
+}
+
+.login input:valid {
+  border: 1px solid #ccc;
+}
+
+.login input:disabled {
+  background: #eee;
+}
+
+
+.login select {
+  padding: 6px 7px;
+  width: 80%;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+  margin-bottom: 5px;
+}
+
+
+
+
+.login input[type="submit"] {
+  display: block;
+  margin: 0px auto;
+}
+
+
+
+.logo-produce, h1, p {
+  text-align: left;
+  padding-bottom: 5px;
+} 
+
+.logo-aplicacion, h1, p {
+  text-align: center;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.column {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.left {
+  width: 50%;
+}
+.right {
+  width: 50%;
+}
+.center {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+/*--------------Checkbox------------*/
+
+/* los checkboxes */
+#c1 input:checked ~ .checkmark {
+background-color: #000;
+}
+
+/* Contenedor */
+.check {
+  display: block;
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  font-size: 22px;
+}
+
+/* escondemos el default checkbox */
+.check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* creamos un custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #ccc;
+  border-radius: 50%;
+}
+
+/* Al pasar el mouse encima, lo ponemos gris */
+.check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* creamos el marcador (escondido al no seleccionar) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* mostramos el marcador al seleccionar */
+.check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* estilo del marcador */
+.check .checkmark:after {
+  left: 7px;
+  top: 4px;
+  width: 1px;
+  height: 7px;
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.login .radio {
+  font-size: 10px;
+}
+
+.columnRadio {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+/* -------------Radio----------------*/
   
   /* El contenedor */
   .radio{
@@ -420,7 +460,7 @@
     left: 0;
     height: 10px;
     width: 10px;
-    background-color: #FFBEBA;
+    background-color: #83E4B0;
     border-radius: 50%;
     margin-top: 3px;
   }
