--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -2,7 +2,7 @@
   <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
 </ngx-spinner>
 <body class="align">
-  <div class="container">
+  <div class="container login">
  <div class="form"> 
      <div class="header" *ngIf="isVisiblePerfil">
       <div class="circle"> 
@@ -11,39 +11,45 @@
         </div> 
       </div>        
       <div class="title" >
-        <h2>Mi perfil</h2>
-        <h3>Persona Natural</h3> 
+        <h2 style="text-align: left; font-size: 26px;">Mi perfil</h2>
+        <h3 style="text-align: left; font-size: 20px; font-family:'plutosanslight';">Persona Natural</h3> 
     </div>
   </div>
+  <div class="col-sm-12" style="padding-left: 0; padding-right:0"> 
+    <div class="col-sm-5" style="padding-left: 0; padding-right:0">
        <div class="personal" *ngIf="isVisiblePerfil">
-         <h5>Información personal</h5>
-            <p>DNI : {{dni}}</p>  
-            <p>Nombres y apellidos : {{nombre_completo}}</p>
-            <p>Dirección : {{direccion}}</p> 
+         <h5 style="color: black;font-size:16px; font-family:'plutosansregular'; font-weight: 300;">Información personal</h5>
+            <p style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">DNI : {{dni}}</p>  
+            <p style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Nombres y apellidos : {{nombre_completo}}</p>
+            <p style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Dirección : {{direccion}}</p> 
           </div>
+        </div>
+        <div class="col-sm-2"></div>
 
+        <div class="col-sm-5" style="padding-left: 0; padding-right:0">
         <div class="contacto" *ngIf="isVisiblePerfil">
-        <h5>Información de contacto         
-          <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20" (click)="clickEditarContacto()">
+        <h5 style="color: black;font-size:16px; font-family:'plutosansregular'; font-weight: 300;">Información de contacto         
+          <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20" (click)="clickEditarContacto()" style="float: right;">
         </h5>
          <div *ngIf="isVisibleContacto"> 
-          <p>Celular : {{celular}}</p> 
-          <p>Correo :  {{correo}}</p>
+          <p style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Celular : {{celular}}</p> 
+          <p style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Correo :  {{correo}}</p>
         </div>
         </div>
+      
         
         <div *ngIf="isVisibleEditarContacto">
         <div>
-          <label for="apellidos">Celular</label>
-          <input type="text" id="apellidos" name="apellidos" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)" >
-          <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
-               <p class="validador" *ngIf="validadorCelularLength">El celular debe contener 9 digitos</p>
+          <label for="apellidos" style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Celular</label>
+          <input type="text" id="apellidos" name="apellidos" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)" style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">
+          <p class="validador" *ngIf="validadorCelular" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el celular.</p>
+               <p class="validador" *ngIf="validadorCelularLength" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">El celular debe contener 9 digitos</p>
         </div>
         <div>
-          <label for="nombres">Correo</label>
-          <input type="text" id="nombres" name="nombres" placeholder="Ej.:camila.flores@ejemplo.com" [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" >
-          <p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>
-          <p class="validador" *ngIf="validadorCorreoInvalido">Correo inválido.</p>
+          <label for="nombres" style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">Correo</label>
+          <input type="text" id="nombres" name="nombres" placeholder="Ej.:camila.flores@ejemplo.com" [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;">
+          <p class="validador" *ngIf="validadorCorreo" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el correo.</p>
+          <p class="validador" *ngIf="validadorCorreoInvalido" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Correo inválido.</p>
         </div>
         <div class="button">
           <button class="buttonSiguiente"  (click)="btnGuardarContacto()">Guardar cambios</button>
@@ -51,13 +57,16 @@
         </div>
       </div>
 
+    </div>
+  </div>
+
       <div *ngIf="isVisibleEditarImg">
-        <h2 align="center">Editar foto</h2>
+        <h2 style="text-align: center; font-size: 26px; color: black;">Editar foto</h2>
         <div class="editar">
          <div class="circle"> 
          </div> 
         </div>   
-         <input type="file" name="adjunto" accept=".pdf,.jpg,.png" multiple />
+         <input type="file" name="adjunto" accept=".pdf,.jpg,.png" multiple style="color: rgba(88, 89, 91, 0.8);font-size:12px; font-family:'plutosansregular'; font-weight: 400;"/>
 
        <div class="button">
          <button class="buttonSiguiente">Guardar</button>
