--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -5,27 +5,27 @@
     <div class="login">     
       <header class="login__header">
         <div class="logo-produce">
-          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo">
         </div>  
         <div class="logo-aplicacion">
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
         <div class="title" *ngIf="!validaSuccess">
-          <h2 align="center">Recuperar contraseña</h2>
-          <p>Persona Jurídica</p>
+          <h2 style="text-align: center; font-size: 26px;">Recuperar contraseña</h2>
+          <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</p>
         </div>         
       </header>  
       <form class="login__form">     
         <div *ngIf="!validaSuccess">
           <div>
-            <label for="numeroDocumento">RUC</label>
-            <input type="text" id="numeroDocumento" name="numeroDocumento" [(ngModel)]="numeroDocumento" placeholder="Ej.:10152346872"  maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)">
+            <label for="numeroDocumento" style="color: rgba(88, 89, 91, 0.8);font-size:13px; font-family:'plutosansregular'; font-weight: 400;">RUC</label>
+            <input type="text" id="numeroDocumento" name="numeroDocumento" [(ngModel)]="numeroDocumento" placeholder="Ej.:10152346872"  maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">
             <p class="validador" *ngIf="validarRuc">Debe ingresar el número de RUC.</p>
          </div>
            <div>
-              <label for="DocPerNatural"  >NÚMERO DE DOCUMENTO</label>
-              <input type="text" id="DocPerNatural" name="DocPerNatural" [(ngModel)]="DocPerNatural" placeholder="Ej.:15234687" (change)="changeDocPerNatural()"  (keypress)="restrictNumeric($event)" maxlength="12" >
+              <label for="DocPerNatural" style="color: rgba(88, 89, 91, 0.8);font-size:13px; font-family:'plutosansregular'; font-weight: 400;" >NÚMERO DE DOCUMENTO</label>
+              <input type="text" id="DocPerNatural" name="DocPerNatural" [(ngModel)]="DocPerNatural" placeholder="Ej.:15234687" (change)="changeDocPerNatural()"  (keypress)="restrictNumeric($event)" maxlength="12" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">
               <p class="validador" *ngIf="validarDocPerNatural">Debe ingresar el número de documento.</p>
 
             </div> 
@@ -35,8 +35,8 @@
         </div>
   
         <div class="footer">
-          <p>¿No tienes una cuenta de empresa?</p>  
-          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
+          <p style="color: rgba(88, 89, 91, 0.8); font-family: 'plutosansregular';font-size: 13px; font-weight: 300">¿Ya tienes una cuenta?</p>  
+          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 500; color: #000000; background-color: white !important;">Crea una ahora</a>
         </div>
         </div> 
 
