--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
@@ -31,7 +31,45 @@ h3 {
   margin-top: 0%;
   margin-bottom: 0%;
 }
- 
+@media only screen and (max-width: 320px) {
+  .login {
+    position: relative;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    max-width: 320px !important;
+    padding: 40px;
+    height: fit-content;
+    margin: 50px auto 20px;
+}
+
+.login {
+  max-width: 320px !important;  
+}
+/* ---------- ALIGN ---------- */
+.align {
+  display: grid;
+}
+
+}
+@media only screen and (min-width: 780px) {
+  .login {
+    position: relative;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    width: 700px !important;
+    padding: 40px;
+    height: fit-content;
+    margin:  50px auto 20px;
+}
+
+.login {
+  width: 700px !important;  
+}
+
+}
+
 
 
 input {
@@ -72,25 +110,24 @@ a:hover {
 /* ---------- ALIGN ---------- */
 .align {
   display: grid;
-  place-items: center;
-  background-color: #eee;
 }
 
 
 /* ---------- BUTTON ---------- */
-
 .buttonSiguiente {
-  background-color: #58595B;
+  background-color: rgba(88, 89, 91, 0.8);
   color: #FFFFFF;
   margin: 12px 0px 6px 0px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #58595B;
+  border: 0px solid #58595B;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
   
 .buttonCancelar {
@@ -98,13 +135,15 @@ a:hover {
   color: #000;
   margin-bottom: 5px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #ccc;
+  border: 0px solid #ccc;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
 
 
@@ -125,7 +164,10 @@ a:hover {
 .buttonSiguiente:hover {
   background-color: #000000;
 }
-
+.buttonCancelar:hover {
+  background-color: #EB1E23;
+  color: #FFF;
+}
 
 /* ---------- ICONS ---------- */
 .icons {
@@ -142,43 +184,8 @@ a:hover {
 
 /* ---------- LOGIN ---------- */
 .login {
-  width: 410px;
-  height: 620px;
   background-color: #FFF
-
 }
-
-.login__header {
-  background-color: #fff;
-  color: #000;
-  padding: 0.5em 0.5em 0em 0.5em;
-}
-
-
-
-.login__header p {
-  text-align: center;
-  margin-top: 0%;
-  margin-bottom: 0%;
-  padding-top: 0%;
-}
-
-.login__header .title h3 {
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 0%;
-  font-size: 22px;
-  font-weight: 600;
-}
-
-
-.login__header .title p {
-  text-align: center;
-  margin-top: 0%;
-  margin-bottom: 0%;
-  padding-top: 0%;
-}
-
 
 .login__header {
   background-color: #fff;
@@ -187,13 +194,9 @@ a:hover {
 }
 
 .login__header h3 {
-  text-align: center;
-  margin-top: 10px;
+  margin-top: 0%;
   margin-bottom: 0%;
-  font-size: 22px;
-  font-weight: 600;
 }
-
 
 
 .login__header p {
@@ -212,7 +215,6 @@ a:hover {
   margin-bottom: 10px;
 }
 
-
 .login h2 .icon {
   margin-right: 14px;
 }
@@ -224,7 +226,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 0.5em 1.6em 1.3em 1.6em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
 }
 
@@ -234,19 +236,23 @@ a:hover {
   margin: 0px;
 }
 
+
 .login input {
   background-color: #fff;
   width: 100%;
-  padding: 5px 7px;
+  padding: 10px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 1px;
   box-sizing: border-box;
   font-size: 12px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   margin-top: 5px;
 }
-
+.login input:focus {
+  border: 1px solid rgba(229, 0, 0, 0.8) !important;
+  outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+}
 .login .input-wrapper {
   position: relative;
   width: 100%;
@@ -258,7 +264,7 @@ a:hover {
 }
 
 .login .input-icon {
-  color: #191919;
+  color: rgba(229, 0, 0, 0.8) !important;
   position: absolute;
   width: 20px;
   height: 20px;
@@ -267,13 +273,11 @@ a:hover {
   transform: translateY(-50%);
 }
 
-
 .login .input-icon.password {
   left: unset;
   right: 12px;
   opacity: 0.4;
 }
-
 
 
 
@@ -293,6 +297,7 @@ a:hover {
   background: #eee;
 }
 
+
 .login select {
   padding: 6px 7px;
   width: 80%;
@@ -304,17 +309,6 @@ a:hover {
 }
 
 
-.login select:required {
-  border: 1px solid #EB1E23;
-}
-
-.login select:invalid {
-  border: 2px solid #EB1E23;
-}
-
-.login select:valid {
-  border: 2px solid #ccc;
-}
 
 
 .login input[type="submit"] {
