--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.css
@@ -64,57 +64,65 @@ a:hover {
 /* ---------- ALIGN ---------- */
 .align {
   display: grid;
-  place-items: center;
-  background-color: #eee;
 }
 
 /* ---------- BUTTON ---------- */
 
+
 .buttonSiguiente {
-  background-color: #58595B;
+  background-color: rgba(88, 89, 91, 0.8);
   color: #FFFFFF;
   margin: 12px 0px 6px 0px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #58595B;
+  border: 0px solid #58595B;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
   
- .buttonCancelar {
+.buttonCancelar {
   background-color: #eee;
   color: #000;
   margin-bottom: 5px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #ccc;
+  border: 0px solid #ccc;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
+  
+  
+  .buttonPaso {
+    background-color: #000000; /* Green */
+    border: none;
+    color: white;
+    padding: 4px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 7px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-family: 'plutosansregular';
+    font-weight: 400;
 
-.buttonPaso {
-  background-color: #000000; /* Green */
-  border: none;
-  color: white;
-  padding: 6px 12px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  margin: 4px 7px;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
-.buttonSiguiente:hover {
-  background-color: #000000;
-}
+  }
+  
+  .buttonSiguiente:hover {
+    background-color: rgba(88, 89, 91, 0.8);
+  }
+  
 
 
 /* ---------- ICONS ---------- */
@@ -131,9 +139,6 @@ a:hover {
 
 /* ---------- LOGIN ---------- */
 .login {
-  width: 410px;
-  height: 620px;
-  background-color: #FFF
 
 }
 
@@ -197,7 +202,11 @@ a:hover {
   padding: 0.2em 1.6em 1.3em 1.6em;
   
 }
-
+ 
+.login input:focus {
+  border: 1px solid rgba(229, 0, 0, 0.8) !important;
+  outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+}
 .login__form h3{
   font-size: 12px;
 }
@@ -436,7 +445,7 @@ a:hover {
     left: 0;
     height: 10px;
     width: 10px;
-    background-color: #FFBEBA;
+    background-color: #e5e5e5;
     border-radius: 50%;
     margin-top: 3px;
   }
@@ -485,4 +494,44 @@ a:hover {
     color: #EB1E23;
     text-align: left;
     margin-bottom: 6px;
+  }
+
+  @media only screen and (max-width: 320px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      max-width: 320px !important;
+      padding: 40px;
+      height: fit-content;
+      margin:  50px auto 20px;
+  }
+  
+  .login {
+    max-width: 320px !important;  
+  }
+  /* ---------- ALIGN ---------- */
+  .align {
+    display: grid;
+    place-items: flex-start;
+  }
+  
+  }
+  @media only screen and (min-width: 780px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      width: 700px !important;
+      padding: 40px;
+      height: fit-content;
+      margin:  50px auto 20px;
+  }
+  
+  .login {
+    width: 700px !important;  
+  }
+  
   }
