--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
@@ -8,7 +8,7 @@
   }
   
   body {
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'plutosansregular', sans-serif;
     line-height: 1.5;
     margin: 0;
     padding: 0vmin;
@@ -61,57 +61,63 @@
   /* ---------- ALIGN ---------- */
   .align {
     display: grid;
-    place-items: center;
-    background-color: #eee;
   }
   
   /* ---------- BUTTON ---------- */
   
-  .buttonSiguiente {
-    background-color: #58595B;
-    color: #FFFFFF;
-    margin: 12px 0px 6px 0px;
-    width: 100%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 5px 7px;
-    border: 2px solid #58595B;
-  }
-    
-  .buttonCancelar {
-    background-color: #eee;
-    color: #000;
-    margin-bottom: 5px;
-    width: 100%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 5px 7px;
-    border: 2px solid #ccc;
-  }
+ 
+.buttonSiguiente {
+  background-color: rgba(88, 89, 91, 0.8);
+  color: #FFFFFF;
+  margin: 12px 0px 6px 0px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 5px 7px;
+  border: 0px solid #58595B;
+  font-family: 'plutosansregular';
+  font-weight: 500;
+}
+  
+.buttonCancelar {
+  background-color: #eee;
+  color: #000;
+  margin-bottom: 5px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 5px 7px;
+  border: 0px solid #ccc;
+  font-family: 'plutosansregular';
+  font-weight: 500;
+}
   
   
   .buttonPaso {
     background-color: #000000; /* Green */
     border: none;
     color: white;
-    padding: 6px 12px;
+    padding: 4px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
+    font-size: 16px;
     margin: 4px 7px;
     cursor: pointer;
     border-radius: 50%;
+    font-family: 'plutosansregular';
+    font-weight: 400;
+
   }
   
   .buttonSiguiente:hover {
-    background-color: #000000;
+    background-color: rgba(88, 89, 91, 0.8);
   }
   
   
@@ -130,9 +136,6 @@
   
   /* ---------- LOGIN ---------- */
   .login {
-    width: 410px;
-    height: 620px;
-    background-color: #FFF
 
   }
   
@@ -178,7 +181,10 @@
     
   }
   
-  
+  .login input:focus {
+    border: 1px solid rgba(229, 0, 0, 0.8) !important;
+    outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+  }
   .login label{
     text-align: left;
     font-size: 12px;
@@ -189,7 +195,7 @@
   .login input {
     background-color: #fff;
     width: 100%;
-    padding: 5px 7px;
+    padding: 10px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 1px;
@@ -413,7 +419,7 @@
     left: 0;
     height: 10px;
     width: 10px;
-    background-color: #FFBEBA;
+    background-color: #e5e5e5;
     border-radius: 50%;
     margin-top: 3px;
   }
@@ -453,3 +459,42 @@
     margin-bottom: 6px;
   }
 
+  @media only screen and (max-width: 320px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      max-width: 320px !important;
+      padding: 40px;
+      height: fit-content;
+      margin: 50px auto 20px;
+  }
+  
+  .login {
+    max-width: 320px !important;  
+  }
+  /* ---------- ALIGN ---------- */
+  .align {
+    display: grid;
+    place-items: flex-start;
+  }
+  
+  }
+  @media only screen and (min-width: 780px) {
+    .login {
+      position: relative;
+      box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+      border-radius: 4px;
+      width: 700px !important;
+      padding: 40px;
+      height: fit-content;
+      margin: 50px auto 20px;
+  }
+  
+  .login {
+    width: 700px !important;  
+  }
+  
+  }
