--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -5,14 +5,14 @@
     <div class="login">  
       <header class="login__header">
         <div class="logo-produce">
-          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo">
         </div>  
         <div class="logo-aplicacion">
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
-          <h2 align="center" >REGISTRATE</h2>
-          <p>Persona Natural</p>      
+        <h2 style="text-align: center; font-size: 26px;">REGISTRATE</h2>
+          <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Natural</p>      
           <div class="center">
             <button class="buttonPaso" (click)="clickPaso1()" >1</button>
             <button class="buttonPaso" [ngClass]="ispaso2 === true ? 'disabled' : 'null'" (click)="clickPaso2()">2</button>
@@ -21,52 +21,52 @@
 
       <div class="login__form">  
       <div *ngIf="isVisiblePaso1">
-        <label class="check" id="c1">TENGO RUC
+        <label class="check" id="c1" style="color: rgba(88, 89, 91, 0.8);font-size:13px; font-family:'plutosansregular'; font-weight: 400;">Tengo RUC
           <input type="checkbox" [(ngModel)]="tengoRuc">
           <span class="checkmark"></span>
         </label>
     
         <div *ngIf="tengoRuc">
-            <label class="control-label" >RUC</label>
-            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872"  [(ngModel)]="ruc" (change)="changeRuc($event)" maxlength="11" (keypress)="restrictNumeric($event)">
-            <p class="validador" *ngIf="validadorRuc">Debe ingresar el RUC.</p>
-          <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
+            <label class="control-label" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">RUC</label>
+            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872"  [(ngModel)]="ruc" (change)="changeRuc($event)" maxlength="11" (keypress)="restrictNumeric($event)" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+            <p class="validador" *ngIf="validadorRuc" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el RUC.</p>
+          <p class="validador" *ngIf="validadorRucDigitos" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">El RUC debe tener 11 digitos.</p>
          </div>
     
          <div class="column">
             <div class="left">
-                <label for="tipoDoc">TIPO DOCUMENTO</label>
-                <select name="select" placeholder="Seleccionar" [(ngModel)]="tipoDoc" (change)="changeTipoDocumento($event)">
+                <label for="tipoDoc" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">TIPO DOCUMENTO</label>
+                <select name="select" placeholder="Seleccionar" [(ngModel)]="tipoDoc" (change)="changeTipoDocumento($event)" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
                    <option value="0">--Seleccionar--</option>
                    <option value="1">DNI</option>
                    <option value="2">Carnet de Extranjería</option>
                 </select>
-                <p class="validador" *ngIf="validadorTipoDocumento">Debe ingresar el tipo de documento.</p>
+                <p class="validador" *ngIf="validadorTipoDocumento" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el tipo de documento.</p>
             </div>        
             <div class="right">
-                <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-                 <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="12" (keypress)="restrictNumeric($event)" (blur)="btnBuscarDNI()"  [disabled]="isDisableNroDocumento">  <!--(blur)="buscarReniec()" -->
-                <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+                <label for="numeroDoc" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8)">NÚMERO DOCUMENTO</label>
+                 <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="12" (keypress)="restrictNumeric($event)" (blur)="btnBuscarDNI()"  [disabled]="isDisableNroDocumento" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">  <!--(blur)="buscarReniec()" -->
+                <p class="validador" *ngIf="validadorNroDocumento" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el número de documento.</p>
             </div>
         </div>
     
           <div>
-            <label for="apellidos">APELLIDOS</label>
-            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApellidos($event)" maxlength="150" disabled>
-            <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
+            <label for="apellidos" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8)">APELLIDOS</label>
+            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApellidos($event)" maxlength="150" disabled style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+            <p  class="validador" *ngIf="validadorApellidos" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar los apellidos.</p>
           </div>
     
           <div>
-            <label for="nombres">NOMBRES</label>
-            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)" maxlength="150" disabled>
-            <p class="validador" *ngIf="validadorNombres">Debe ingresar los nombres.</p>
+            <label for="nombres" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8)">NOMBRES</label>
+            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)" maxlength="150" disabled style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+            <p class="validador" *ngIf="validadorNombres"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar los nombres.</p>
           </div>
     
           <div>
-            <label for="celular">CELULAR</label>
-            <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)">
-            <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
-            <p class="validador" *ngIf="validadorCelularLength">El celular debe contener 9 digitos</p>
+            <label for="celular" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8)">CELULAR</label>
+            <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+            <p class="validador" *ngIf="validadorCelular"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el celular.</p>
+            <p class="validador" *ngIf="validadorCelularLength"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">El celular debe contener 9 digitos</p>
           </div>
     
           <div>
@@ -76,43 +76,43 @@
       </div>
       <div *ngIf="isVisiblePaso2">
         <div>
-          <label for="correo">CORREO</label>
-          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" >
-             <p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>
-             <p class="validador" *ngIf="validadorCorreoInvalido">Correo inválido.</p> 
+          <label for="correo" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">CORREO</label>
+          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+             <p class="validador" *ngIf="validadorCorreo"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el correo.</p>
+             <p class="validador" *ngIf="validadorCorreoInvalido"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Correo inválido.</p> 
         </div>
   
       <div>
         <div class="input-wrapper">
-          <label for="contrasena">CONTRASEÑA</label>
-          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" >      
+          <label for="contrasena" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">CONTRASEÑA</label>
+          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">      
           <img src="../../assets/img/ver_on.png" (click)="mostrarContrasena()" id="eyeContrasena" class="input-icon password">
         </div>
-        <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
-        <p class="validador" *ngIf="validadorRequisitosContrasena">La contraseña debe cumplir con los requistos</p>
+        <p class="validador" *ngIf="validadorContrasena"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar la contraseña.</p>
+        <p class="validador" *ngIf="validadorRequisitosContrasena"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">La contraseña debe cumplir con los requistos</p>
       </div>
 
       <div>
         <div class="input-wrapper">
-          <label for="contrasena_rep">REPETIR CONTRASEÑA</label>
-          <input type="password"  id="contrasena_rep" name="contrasena_rep" placeholder="" [(ngModel)]="contrasena_rep" (change)="changeContrasenaRep($event)" maxlength="150" >      
+          <label for="contrasena_rep" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">REPETIR CONTRASEÑA</label>
+          <input type="password"  id="contrasena_rep" name="contrasena_rep" placeholder="" [(ngModel)]="contrasena_rep" (change)="changeContrasenaRep($event)" maxlength="150" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">      
           <img src="../../assets/img/ver_on.png" (click)="mostrarContrasenaRepe()" id="eyeContrasena_rep" class="input-icon password">
         </div>
-      <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir">No coincide con la contraseña ingresada.</p>
+      <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">No coincide con la contraseña ingresada.</p>
       </div>
 
 
         <div class="column">
           <div class="left">
-            <label class="radio">Al menos un simbolo
-             <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo"  disabled>
+            <label class="radio" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos un simbolo
+             <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo"  disabled style="width: 10%;">
              <span class="checkradio"></span>
             </label>
          </div>
           
           <div class="right">
-            <label class="radio">Al menos un número
-             <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros"  disabled>
+            <label class="radio"  style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos un número
+             <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros"  disabled style="width: 10%;">
              <span class="checkradio"></span>
             </label>
          </div>
@@ -120,31 +120,31 @@
   
         <div class="columnRadio">
         <div class="left">
-          <label class="radio">Al menos una mayúscula
-           <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula"  disabled>
+          <label class="radio"  style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Al menos una mayúscula
+           <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula"  disabled style="width: 10%;">
            <span class="checkradio"></span>
           </label>
         </div>
         
         <div class="right">
-          <label class="radio">Más de 8 digitos
-           <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos"  disabled>
+          <label class="radio"  style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 400;">Más de 8 digitos
+           <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos"  disabled style="width: 10%;">
            <span class="checkradio"></span>
           </label>
         </div>
       </div>
 
 
-      <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
+      <label class="check" id="c1" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 300;">Acepto los términos y la <a href="#" style="color: rgba(0, 0, 0, 1);">Política de Protección de Datos</a>
         <input type="checkbox" [(ngModel)]="terminos_politica"  (change)="changeTerminos($event)">
         <span class="checkmark"></span>
       </label>
 
-      <label class="check" id="c1">Acepto los términos y la mensajeria
+      <label class="check" id="c1" style="color: rgba(88, 89, 91, 0.8);font-family:'plutosanslight'; font-size: 10px; font-weight: 300;">Acepto los términos y la mensajeria
         <input type="checkbox" [(ngModel)]="terminos_mensajeria"  (change)="changeTerminos($event)" >
         <span class="checkmark"></span>
       </label>
-      <p class="validador" *ngIf="validadorTerminos">Marcar los términos y condiciones.</p>
+      <p class="validador" *ngIf="validadorTerminos"  style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Marcar los términos y condiciones.</p>
 
         <div>
           <button class="buttonSiguiente" (click)="registroPersonaService()">Registrar</button>
@@ -153,8 +153,8 @@
     
       </div>
       <div class="footer">
-        <p>¿Ya tienes una cuenta?</p>  
-        <a href="/sesion-persona?id_aplicacion={{ id_aplicacion }}">Ingresa aquí</a>
+        <p style="color: rgba(88, 89, 91, 0.8); font-family: 'plutosansregular';font-size: 13px; font-weight: 300">¿Ya tienes una cuenta?</p>  
+        <a href="/sesion-persona?id_aplicacion={{ id_aplicacion }}"  style="font-family: 'plutosansregular';font-size: 13px; font-weight: 500; color: #000000; background-color: white !important;">Ingresa aquí</a>
       </div>
     </div>
   </div>
