--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'plutosansregular', sans-serif;
   line-height: 1.5;
   margin: 0;
   padding: 0vmin;
@@ -61,24 +61,24 @@ a:hover {
 /* ---------- ALIGN ---------- */
 .align {
   display: grid;
-  place-items: center;
-  background-color: #eee;
 }
 
 /* ---------- BUTTON ---------- */
 
 .buttonSiguiente {
-  background-color: #58595B;
+  background-color: rgba(88, 89, 91, 0.8);
   color: #FFFFFF;
   margin: 12px 0px 6px 0px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #58595B;
+  border: 0px solid #58595B;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
   
 .buttonCancelar {
@@ -86,13 +86,15 @@ a:hover {
   color: #000;
   margin-bottom: 5px;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   border-radius: 1px;
   padding: 5px 7px;
-  border: 2px solid #ccc;
+  border: 0px solid #ccc;
+  font-family: 'plutosansregular';
+  font-weight: 500;
 }
 
 
@@ -134,8 +136,6 @@ a:hover {
 
 /* ---------- LOGIN ---------- */
 .login {
-  width: 410px;
-  height: 620px;
   background-color: #FFF
 }
 
@@ -192,7 +192,7 @@ a:hover {
 .login input {
   background-color: #fff;
   width: 100%;
-  padding: 5px 7px;
+  padding: 10px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 1px;
@@ -201,7 +201,10 @@ a:hover {
   margin-bottom: 5px;
   margin-top: 5px;
 }
-
+.login input:focus {
+  border: 1px solid rgba(229, 0, 0, 0.8) !important;
+  outline: 1px solid rgba(229, 0, 0, 0.8) !important;
+}
 .login .input-wrapper {
   position: relative;
   width: 100%;
@@ -213,7 +216,7 @@ a:hover {
 }
 
 .login .input-icon {
-  color: #191919;
+  color: rgba(229, 0, 0, 0.8) !important;
   position: absolute;
   width: 20px;
   height: 20px;
@@ -459,4 +462,42 @@ background-color: #000;
   text-align: left;
   margin-bottom: 6px;
 }
+@media only screen and (max-width: 320px) {
+  .login {
+    position: relative;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    max-width: 320px !important;
+    padding: 40px;
+    height: fit-content;
+    margin: 50px auto 20px;
+}
 
+
+.login {
+  max-width: 320px !important;  
+}
+/* ---------- ALIGN ---------- */
+.align {
+  display: grid;
+}
+
+}
+@media only screen and (min-width: 780px) {
+  .login {
+    position: relative;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    -webkit-box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 4px;
+    width: 700px !important;
+    padding: 40px;
+    height: fit-content;
+    margin: 50px auto 20px;
+}
+
+.login {
+  width: 700px !important;  
+}
+
+}
