--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
@@ -5,37 +5,37 @@
     <div class="login">
       <header class="login__header">
         <div class="logo-produce">
-          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo">
         </div>  
         <div class="logo-aplicacion">
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
-          <h2 align="center" >Inicio de Sesión</h2>
-          <p>Persona Jurídica</p>
+        <h2 style="text-align: center; font-size: 26px;">Inicio de Sesión</h2>
+          <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</p>
     </header>
 
       <form class="login__form" >      
         <div>
-             <label for="ruc">N° de RUC del cliente</label>
-            <input type="text" id="ruc" name="ruc"  [(ngModel)]="ruc"  placeholder="Ej.:10152346872" maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)">
-            <p class="validador" *ngIf="validadorRuc">Debe ingresar el número de RUC.</p>
-            <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
+             <label for="ruc" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">N° de RUC del cliente</label>
+            <input type="text" id="ruc" name="ruc"  [(ngModel)]="ruc"  placeholder="Ej.:10152346872" maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+            <p class="validador" *ngIf="validadorRuc" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el número de RUC.</p>
+            <p class="validador" *ngIf="validadorRucDigitos" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">El RUC debe tener 11 digitos.</p>
         </div>
     
           <div>
-              <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento"  placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12">
-              <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+              <label for="numeroDoc" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">NÚMERO DOCUMENTO</label>
+              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento"  placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+              <p class="validador" *ngIf="validadorNroDocumento" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el número de documento.</p>
           </div>
     
           <div>
           <div class="input-wrapper">
-            <label for="contrasena">CONTRASEÑA</label>
-            <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena()" maxlength="150" >      
+            <label for="contrasena" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">CONTRASEÑA</label>
+            <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena()" maxlength="150" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">      
             <img src="../../assets/img/ver_on.png" (click)="mostrarContrasena()" id="eyeContrasena" class="input-icon password">
           </div>
-          <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+          <p class="validador" *ngIf="validadorContrasena" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar la contraseña.</p>
         </div>
 
         <div class="align-right">
@@ -48,10 +48,11 @@
         </div>
   
         <div class="footer">
-          <p>¿No tienes una cuenta de empresa?</p>  
-          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
+          <p style="color: rgba(88, 89, 91, 0.8); font-family: 'plutosansregular';font-size: 13px; font-weight: 300">¿No tienes una cuenta de empresa?</p>  
+          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}"  style="font-family: 'plutosansregular';font-size: 13px; font-weight: 500; color: #000000; background-color: white !important;">Crea una ahora</a>
+          
         </div>
-  
+        
       </form>
     </div>
   
