--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -5,35 +5,35 @@
     <div class="login">
     <header class="login__header">
        <div class="logo-produce">
-         <img src="../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+         <img src="../assets/img/logo_produce.PNG" alt="Logo" title="Logo">
        </div>  
        <div class="logo-aplicacion">
         <img [src]="urlArchivo" alt="archivo"  width="138">
          <!-- <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo"> -->
        </div>
-          <h2 align="center" >Inicio de Sesión</h2>
-          <h3 align="center" >Persona Natural</h3> 
+          <h2 style="text-align: center; font-size: 26px;">Inicio de Sesión</h2>
+          <h3 style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Natural</h3> 
     </header>
 
       <form class="login__form">      
           <div>
-              <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento" placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12">
-              <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+              <label for="numeroDoc" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">NÚMERO DOCUMENTO</label>
+              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento" placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12" style="font-size: 12px; font-family:'plutosansregular'; font-weight: 300;">
+              <p class="validador" *ngIf="validadorNroDocumento" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar el número de documento.</p>
           </div>
     
           <div>
             <div class="input-wrapper">
-              <label for="contrasena">CONTRASEÑA</label>
-              <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena()" maxlength="150" >
+              <label for="contrasena" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 400; color: rgba(88, 89, 91, 0.8);">CONTRASEÑA</label>
+              <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena()" maxlength="150"  class="form">
               <img src="../assets/img/ver_on.png" (click)="mostrarContrasena()" id="eyeContrasena" class="input-icon password">
             </div>
-            <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+            <p class="validador" *ngIf="validadorContrasena" style="color: rgba(230, 0, 0, 0.8);font-family:'plutosanslight'; font-size: 11px; font-weight: 400;">Debe ingresar la contraseña.</p>
           </div>
     
 
-        <div class="align-right">
-          <a href="/recuperar-contrasena-persona?id_aplicacion={{ id_aplicacion }}">Recuperar contraseña</a>
+        <div class="align-right" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 500; color: #000000">
+          <a href="/recuperar-contrasena-persona?id_aplicacion={{ id_aplicacion }}" style="background-color: white !important;">Recuperar contraseña</a>
         </div>
         
         <div>
@@ -43,8 +43,8 @@
         </div>
   
         <div class="footer">
-          <p>¿No tienes una cuenta de persona?</p>  
-          <a href="/registro-persona?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
+          <p style="color: rgba(88, 89, 91, 0.8); font-family: 'plutosansregular';font-size: 13px; font-weight: 300">¿No tienes una cuenta de persona?</p>  
+          <a href="/registro-persona?id_aplicacion={{ id_aplicacion }}" style="font-family: 'plutosansregular';font-size: 13px; font-weight: 500; color: #000000; background-color: white !important;">Crea una ahora</a>
         </div>
       </form>
     </div>
