--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/assets/css/custom.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/assets/css/custom.css
@@ -1,43 +1,34 @@
 @font-face {
-    font-family: 'montserratblack';
-    src: url('../fonts/Montserratt/montserrat-black-webfont.woff2') format('woff2'),
-         url('../fonts/Montserratt/montserrat-black-webfont.woff') format('woff');
+    font-family: 'plutosansbold';
+    src: url('../fonts/PlutoSans/plutosansbold-webfont.woff2') format('woff2'),
+         url('../fonts/PlutoSans/plutosansbold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'montserratbold';
-    src: url('../fonts/Montserratt/montserrat-bold-webfont.woff2') format('woff2'),
-         url('../fonts/Montserratt/montserrat-bold-webfont.woff') format('woff');
+    font-family: 'plutosansmedium';
+    src: url('../fonts/PlutoSans/plutosansmedium-webfont.woff2') format('woff2'),
+         url('../fonts/PlutoSans/plutosansmedium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'montserratmedium';
-    src: url('../fonts/Montserratt/montserrat-medium-webfont.woff2') format('woff2'),
-         url('../fonts/Montserratt/montserrat-medium-webfont.woff') format('woff');
+    font-family: 'plutosansregular';
+    src: url('../fonts/PlutoSans/plutosansregular-webfont.woff2') format('woff2'),
+         url('../fonts/PlutoSans/plutosansregular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'montserratregular';
-    src: url('../fonts/Montserratt/montserrat-regular-webfont.woff2') format('woff2'),
-         url('../fonts/Montserratt/montserrat-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'montserratsemibold';
-    src: url('../fonts/Montserratt/montserrat-semibold-webfont.woff2') format('woff2'),
-         url('../fonts/Montserratt/montserrat-semibold-webfont.woff') format('woff');
+    font-family: 'plutosanslight';
+    src: url('../fonts/PlutoSans/plutosanslight-webfont.woff2') format('woff2'),
+         url('../fonts/PlutoSans/plutosanslight-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -66,7 +57,7 @@
 .callout-danger h4 {
   font-size: 20px !important;
   color: #d9534f;
-  font-family: Roboto, "Helvetica Neue", sans-serif !important;
+  font-family: Roboto, "plutosansregular", sans-serif !important;
 }
 
 .mat-option{
@@ -122,11 +113,10 @@
 html {
   position: relative;
   min-height: 100%;
-  background-color: #eee;
 }
 body {
   background-color: #fff;
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   letter-spacing: -0.3px;
   /* Margin bottom by footer height */
   margin-bottom: 150px;
@@ -143,10 +133,10 @@ body.home {
     border-top: 1px solid #666666;
 }
 .bold {
-  font-family: "montserratrebold", Helvetica, Arial, sans-serif;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif;
 }
 strong {
-  font-family: "montserratrebold", Helvetica, Arial, sans-serif;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
 .img-responsivo {
@@ -166,7 +156,7 @@ strong {
 .nav-menu {
   background: rgba(191, 30, 35);
   border-radius: 4px;
-	font-family: "montserratregular", Helvetica, Arial, sans-serif;
+	font-family: "plutosansregular", Helvetica, Arial, sans-serif;
 }
 /*---------------------
   Header
@@ -187,7 +177,7 @@ strong {
 }
 
 .ht-widget2 .nav-menu {
-    font-family: "montserratregular", Helvetica, Arial, sans-serif;
+    font-family: "plutosansregular", Helvetica, Arial, sans-serif;
 }
 .nav2 {
     padding-left: 0;
@@ -195,7 +185,7 @@ strong {
     list-style: none;
 }
 .mat-h3, .mat-subheading-2, .mat-typography h3 {
-  font-size: 24px Roboto!important;
+  font-size: 24px "plutosansregular"!important;
   font-weight: 500;
   letter-spacing: normal;
   margin: 0 0 16px;
@@ -326,7 +316,7 @@ strong {
 
 .ht-widget .nav-menu {
     border-radius: 4px;
-    font-family: "montserratregular", Helvetica, Arial, sans-serif;
+    font-family: "plutosansregular", Helvetica, Arial, sans-serif;
 }
 
 .ht-widget  ul li i {
@@ -727,7 +717,7 @@ header.home {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 .logo-portal {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   font-size: 30px;
   color: #ed292b;
   padding-top: 4px;
@@ -1242,7 +1232,7 @@ transition: .3s all ease-in;
     display: inline-block;
     width: 90px;
     text-align: center;
-    font-family: "Montserrat",sans-serif;
+    font-family: "plutosansregular",sans-serif;
     font-size: 18px;
     font-weight: 600;
 }
@@ -1358,13 +1348,13 @@ transition: .3s all ease-in;
   text-align: center;
 }
 .banner-interno h1 {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
   font-size: 40px;
 	padding-bottom: 10px;
 }
 .banner-interno p.lead {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   font-size: 24px;
 }
 .title-interno {
@@ -1385,7 +1375,7 @@ transition: .3s all ease-in;
     padding-top: 30px;
   }
   .banner-interno h1 {
-    font-family: "montserratregular", Helvetica, Arial, sans-serif;
+    font-family: "plutosansregular", Helvetica, Arial, sans-serif;
     text-shadow: 0 1px 2px rgba(0,0,0,.6);
     font-size: 30px;
   }
@@ -1409,13 +1399,13 @@ transition: .3s all ease-in;
   margin-bottom: 20px;
 }
 .banner-login h3 {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
   font-size: 20px;
 }
 
 .banner-login p.lead {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   font-size: 24px;
 }
 
@@ -1424,7 +1414,7 @@ transition: .3s all ease-in;
     padding-top: 30px;
   }
   .banner-login h3 {
-    font-family: "montserratregular", Helvetica, Arial, sans-serif;
+    font-family: "plutosansbold", Helvetica, Arial, sans-serif;
     text-shadow: 0 1px 2px rgba(0,0,0,.6);
     font-size: 14px;
     line-height: 1.5;
@@ -1433,11 +1423,11 @@ transition: .3s all ease-in;
 
 
 h2 {
-  font-family: "montserratbold", Helvetica, Arial, sans-serif !important;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif !important;
   margin-bottom: 20px !important;
 }
 h5 {
-  font-family: "montserratbold", Helvetica, Arial, sans-serif;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif;
   margin-bottom: 20px;
 	font-size: 1.8rem;
 	font-weight: 600;
@@ -1842,7 +1832,7 @@ hr {
 }
 
 .acceso-directo a h3 {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   color: #333;
 }
 
@@ -1878,7 +1868,7 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.20);*/
 }
 
 .table-custom>thead>tr>td, .table-custom>thead>tr>th  {
-  font-family: "montserratbold", Helvetica, Arial, sans-serif;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
   font-size: 13px;
@@ -1898,7 +1888,7 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.20);*/
 
 
 .form-horizontal .control-label {
-  font-family: "montserratbold", Helvetica, Arial, sans-serif;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif;
 }
 
 .acceso-directo a.title:hover h3 {
@@ -1917,12 +1907,12 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.20);*/
 	/* margin-bottom: 30px; */
 }
 .banner-principal h1 {
-  font-family: "montserratmedium", Helvetica, Arial, sans-serif;
+  font-family: "plutosansmedium", Helvetica, Arial, sans-serif;
   text-shadow: 5px 2px 5px rgba(0,0,0);
   font-size: 48px !important;
 }
 .banner-principal p.lead {
-  font-family: "montserratbold", Helvetica, Arial, sans-serif !important;
+  font-family: "plutosansbold", Helvetica, Arial, sans-serif !important;
   text-shadow: 1px 1px 5px rgb(255, 255, 255);
   color: black;
   /* font-size: 24px !important; */
@@ -2016,7 +2006,7 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.20);*/
     padding-top: 50px;
   }
   .banner-principal h1 {
-    font-family: "montserratbold", Helvetica, Arial, sans-serif;
+    font-family: "plutosansbold", Helvetica, Arial, sans-serif;
     text-shadow: 5px 2px 5px rgba(0,0,0);
     font-size: 38px;
   }
@@ -2222,7 +2212,7 @@ a:hover .card .caption {
   vertical-align: middle;
 }
 .media-heading {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.2;
   margin-bottom: 0;
@@ -2456,7 +2446,7 @@ a:hover .card .caption {
 
 
 .awesomplete {
-  font-family: "montserratregular", Helvetica, Arial, sans-serif;
+  font-family: "plutosansregular", Helvetica, Arial, sans-serif;
   width: 100%;
 }
 .awesomplete > ul {
@@ -2477,7 +2467,7 @@ a:hover .card .caption {
 }
 .awesomplete mark {
   background: transparent!important;
-  font-family: "montserratmedium", Helvetica, Arial, sans-serif;
+  font-family: "plutosansmedium", Helvetica, Arial, sans-serif;
   padding: 0;
 }
 .awesomplete > ul > li {
