--- a/Prod.LoginUnico.Web/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -11,7 +11,7 @@
            </div> 
          </div>        
          <div class="title">
-           <h2 style="text-align: left; font-size: 26px;">Mi perfil</h2>
+           <h2 style="text-align: left; font-size: 26px;  font-weight: bold;">Mi perfil</h2>
            <h3 style="text-align: left; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</h3>    
        </div>
      </div>
