--- a/Prod.LoginUnico.Web/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -11,7 +11,7 @@
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
-        <h2 style="text-align: center; font-size: 26px;">REGISTRATE</h2>
+        <h2 style="text-align: center; font-size: 26px;  font-weight: bold;">REGISTRATE</h2>
         <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</p>
           <div class="Pasos">
             <button class="buttonPaso" (click)="clickPaso1()" >1</button>
