--- a/Prod.LoginUnico.Web/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -12,7 +12,7 @@
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
         <div class="title" *ngIf="!validaSuccess">
-          <h2 style="text-align: center; font-size: 26px;">Recuperar contraseña</h2>
+          <h2 style="text-align: center; font-size: 26px;  font-weight: bold;">Recuperar contraseña</h2>
           <p style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Jurídica</p>
         </div>         
       </header>  
