--- a/Prod.LoginUnico.Web/ClientApp/src/app/sesion-persona/sesion-persona.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/sesion-persona/sesion-persona.component.html
@@ -11,7 +11,7 @@
         <img [src]="urlArchivo" alt="archivo"  width="138">
          <!-- <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo"> -->
        </div>
-          <h2 style="text-align: center; font-size: 26px;">Inicio de Sesión</h2>
+          <h2 style="text-align: center; font-size: 26px; font-weight: bold;">Inicio de Sesión</h2>
           <h3 style="text-align: center; font-size: 20px; font-family:'plutosanslight';">Persona Natural</h3> 
     </header>
 
